fixed portfolio spacing, mobile nav menus

--- a/app/assets/scss/modules/_layout.scss
+++ b/app/assets/scss/modules/_layout.scss
@@ -47,7 +47,7 @@ main {
 
   .site-wrap {
 
-    margin: 20px;
+    margin: 20px 20px 0 20px;
 
     img {
       max-width: 100%;
