--- a/app/assets/scss/modules/_nav.scss
+++ b/app/assets/scss/modules/_nav.scss
@@ -10,14 +10,23 @@
 
   @include mobile {
     font-size: 0.45em;
-}
+  }
 }
 
+@mixin menu-item-size {
+  width: 160px;
+  height: 160px;
+
+  @include mobile {
+    width: 145px;
+    height: 145px;
+  }
+}
 
 nav {
   font-family: 'Comfortaa', cursive;
   position: fixed;
-  background: white;
+  background: #fff;
   z-index: 2;
 
   a {
@@ -25,8 +34,7 @@ nav {
     height: 100%;
     text-decoration: none;
     display: inline-block;
-    color: black;
-
+    color: #000;
   }
 }
 
@@ -55,32 +63,27 @@ nav {
   }
 
 
-@include mobile {
-  transform: rotate(-45deg);
-  width: 190px;
-  height: 190px;
+  @include mobile {
+    transform: rotate(-45deg);
+    width: 190px;
+    height: 190px;
 
-  top: -110px;
-  left: -110px;
+    top: -110px;
+    left: -110px;
 
-  box-shadow: 2px 3px 3px black;
+    box-shadow: 2px 3px 3px black;
 
-}
+  }
 
 }
 
 .top-right {
   transform: rotate(45deg);
-  width: 160px;
-  height: 160px;
   top: -90px;
   right: -90px;
   box-shadow: 2px 3px 3px black;
 
-  @include mobile {
-    width: 145px;
-    height: 145px;
-}
+@include menu-item-size;
 
   &:hover {
     animation-name: top-right-wiggle;
@@ -98,17 +101,11 @@ nav {
 
 .bottom-left {
   transform: rotate(-45deg);
-  width: 160px;
-  height: 160px;
   bottom: -90px;
   left: -90px;
   box-shadow: 2px 3px 3px black;
 
-
-    @include mobile {
-      width: 145px;
-      height: 145px;
-  }
+  @include menu-item-size;
 
   &:hover {
     animation-name: bottom-left-wiggle;
@@ -116,8 +113,8 @@ nav {
   }
 
   a {
-    margin-top: 47px;
-    margin-left: 62px;
+    margin-top: 43px;
+    margin-left: 61px;
     transform: rotate(90deg);
     @include nav-link-style;
   }
@@ -125,19 +122,12 @@ nav {
 }
 
 .bottom-right {
-
   transform: rotate(45deg);
-  width: 160px;
-  height: 160px;
   bottom: -90px;
   right: -90px;
   box-shadow: -2px 3px 3px black;
 
-
-    @include mobile {
-      width: 140px;
-      height: 140px;
-  }
+@include menu-item-size;
 
   &:hover {
     animation-name: bottom-right-wiggle;
@@ -145,12 +135,9 @@ nav {
   }
 
   a {
-    margin-top: 48px;
-    margin-right: 101px;
+    margin-top: 43px;
+    margin-left: -59px;
     transform: rotate(-90deg);
-    position: relative;
-    top: -16%;
-    right: 39%;
 
     @include nav-link-style;
 
